--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# https://spring.io/guides/gs/authenticating-ldap/
+ldapServerUrl=ldap://localhost:8389/dc=springframework,dc=org
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
